restart allocator, initial commit (#614)
* restart allocator, initial commit

Co-authored-by: imakunin <imakunin@yandex-team.ru>