@@ -12,8 +12,10 @@ import jakarta.inject.Singleton;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+
+import static ai.lzy.allocator.alloc.impl.kuber.PodSpecBuilder.TUNNEL_POD_TEMPLATE_PATH;
 
 @Singleton
 @Requires(property = "allocator.kuber-tunnel-allocator.enabled", value = "true")
@@ -39,9 +41,10 @@ public class KuberTunnelAllocator implements TunnelAllocator {
      * The tunnel pod must contain {@link ai.lzy.tunnel.TunnelAgentMain}.
      *
      * @param vmSpec - Spec of the VM to create tunnel from.
+     * @return allocated Pod name
      * @throws InvalidConfigurationException - if allocator cannot find suit cluster for the vm spec.
      */
-    public void allocateTunnel(Vm.Spec vmSpec) throws InvalidConfigurationException {
+    public String allocateTunnel(Vm.Spec vmSpec) throws InvalidConfigurationException {
         final var cluster = clusterRegistry.findCluster(
             vmSpec.poolLabel(), vmSpec.zone(), ClusterRegistry.ClusterType.User);
         if (cluster == null) {
@@ -50,20 +53,18 @@ public class KuberTunnelAllocator implements TunnelAllocator {
         }
 
         try (final var client = factory.build(cluster)) {
-            Pod tunnelPod = new PodSpecBuilder(vmSpec, client, config, PodSpecBuilder.TUNNEL_POD_TEMPLATE_PATH,
-                TUNNEL_POD_NAME_PREFIX)
+            Pod tunnelPod = new PodSpecBuilder(vmSpec, client, config, TUNNEL_POD_TEMPLATE_PATH, TUNNEL_POD_NAME_PREFIX)
                 .withWorkloads(
-                    Collections.singletonList(new Workload(
-                            "tunnel", config.getTunnelPodImage(), Collections.emptyMap(),
-                            Collections.emptyList(), Collections.emptyMap(), Collections.emptyList()
-                        )
-                    ), false)
+                    List.of(
+                        new Workload("tunnel", config.getTunnelPodImage(), Map.of(), List.of(), Map.of(), List.of())),
+                    /* init */ false)
                 // not to be allocated with another tunnel
-                .withPodAntiAffinity(KuberLabels.LZY_APP_LABEL, "In", vmSpec.sessionId(),
-                    TUNNEL_POD_APP_LABEL_VALUE)
+                .withPodAntiAffinity(KuberLabels.LZY_APP_LABEL, "In", vmSpec.sessionId(), TUNNEL_POD_APP_LABEL_VALUE)
                 // not to be allocated with pod form another session
                 .withPodAntiAffinity(KuberLabels.LZY_POD_SESSION_ID_LABEL, "NotIn", vmSpec.sessionId())
                 .build();
+
+            final var podName = tunnelPod.getMetadata().getName();
 
             try {
                 tunnelPod = client.pods()
@@ -71,15 +72,17 @@ public class KuberTunnelAllocator implements TunnelAllocator {
                     .resource(tunnelPod)
                     .create();
             } catch (Exception e) {
-                LOG.error("Failed to allocate tunnel pod: {}", e.getMessage(), e);
-                //TODO (tomato): add retries here if the error is caused due to temporal problems with kuber
+                if (KuberUtils.isResourceAlreadyExist(e)) {
+                    LOG.warn("Tunnel pod {} already exists.", podName);
+                    return podName;
+                }
+
+                LOG.error("Failed to allocate tunnel pod {}: {}", podName, e.getMessage(), e);
                 throw new RuntimeException("Failed to allocate tunnel pod: " + e.getMessage(), e);
             }
-            LOG.debug("Created tunnel pod in Kuber: {}", tunnelPod);
-        } catch (RuntimeException e) {
-            throw e;
-        } catch (Exception e) {
-            throw new RuntimeException("Database error: " + e.getMessage(), e);
+
+            LOG.info("Created tunnel pod {} in Kuber: {}", podName, tunnelPod);
+            return podName;
         }
     }
 
@@ -96,31 +99,30 @@ public class KuberTunnelAllocator implements TunnelAllocator {
     public Workload createRequestTunnelWorkload(String remoteV6, String poolLabel, String zone)
         throws InvalidConfigurationException
     {
-        final var cluster = clusterRegistry.findCluster(
-            poolLabel, zone, ClusterRegistry.ClusterType.User);
+        final var cluster = clusterRegistry.findCluster(poolLabel, zone, ClusterRegistry.ClusterType.User);
         if (cluster == null) {
             throw new InvalidConfigurationException(
                 "Cannot find pool for label " + poolLabel + " and zone " + zone);
         }
+
+        final var clusterPodsCidr = clusterRegistry.getClusterPodsCidr(cluster.clusterId());
+
         return new Workload(
             "request-tunnel",
             config.getTunnelRequestContainerImage(),
-            Collections.emptyMap(),
+            Map.of(),
             List.of(
                 config.getTunnelRequestContainerGrpCurlPath(),
                 "--plaintext",
                 "-d",
-                String.format(
-                    "{\"remote_v6_address\": \"%s\", \"worker_pod_v4_address\": \"%s\", \"k8s_v4_pod_cidr\": \"%s\"}",
-                    remoteV6,
-                    String.format("$(%s)", AllocatorAgent.VM_IP_ADDRESS),
-                    clusterRegistry.getClusterPodsCidr(cluster.clusterId())
-                ),
-                String.format("$(%s):%d", AllocatorAgent.VM_NODE_IP_ADDRESS, TUNNEL_AGENT_PORT),
+                "{\"remote_v6_address\": \"%s\", \"worker_pod_v4_address\": \"$(%s)\", \"k8s_v4_pod_cidr\": \"%s\"}"
+                    .formatted(remoteV6, AllocatorAgent.VM_IP_ADDRESS, clusterPodsCidr),
+                "$(%s):%d"
+                    .formatted(AllocatorAgent.VM_NODE_IP_ADDRESS, TUNNEL_AGENT_PORT),
                 "ai.lzy.v1.tunnel.LzyTunnelAgent/CreateTunnel"
             ),
-            Collections.emptyMap(),
-            Collections.emptyList()
+            Map.of(),
+            List.of()
         );
     }
 }
